# serial-console

./: .gitignore  Cargo.toml  README.md
aur/: .gitignore  Makefile  PKGBUILD  README.md
src/: main.rs
