[package]
name = "serial-console"
version = "0.4.4"
authors = ["Hendrik Wolff <hendrik.wolff@agdsn.me>"]
license = "MIT"
repository = "https://gitlab.com/w0lff/serial-console"
description = "A command line tool to communicate with a serial console"
categories = ["command-line-utilities"]
keywords = ["cli", "serial", "console", "rs232"]
edition = "2018"

[dependencies]
clap = { version = "3.0.4", features = ["derive"] }
log = "0.4.14"
serialport = "4.0.1"
termion = "1.5.6"

[[bin]]
name = "sc"
path = "src/main.rs"
